# apsa

./: .gitignore  README.md
2016/callgraphs/: .classpath  .project
2016/ifds/: .gitignore
2016/lecture/: APSA-00-OrganizationAndOverview.key  APSA-01-Introduction-baseNumberOfDigits.ai.html  APSA-01-Introduction-baseNumberOfDigits.cfg.dot  APSA-01-Introduction-factorial.cfg.dot  APSA-01-Introduction-max.cfg.dot  APSA-01-Introduction.key  APSA-02-Factorial-AICFG.dot  APSA-02-Factorial-DominatorTreeOfTheAICFG.dot  APSA-02-Factorial-DominatorTreeOfTheRuntimeCFG.dot  APSA-02-Factorial-ImplicitDefUseGraph.dot  APSA-02-Factorial-RuntimeCFG.dot  APSA-02-Java Bytecode-Bytecode.numbers  APSA-02-Java Bytecode-maxAlt.tac.cfg.dot  APSA-02-Java Bytecode-maxAlt.tac.txt  APSA-02-Java Bytecode-tryfinally.cfg.dot  APSA-02-Java Bytecode.key  APSA-02-checkIt-AICFG.dot  APSA-02-checkIt-RegularCFG.cfg.dot  APSA-02-checkIt-RegularCFG.tac.cfg.dot  APSA-03-AdvancedTerminology.key  APSA-03-IntroductionToOPAL-Solution.key  APSA-03-IntroductionToOPAL.key  APSA-04-AdvancedTerminology.key  APSA-08-IFDS.pptx  (+16 more)
2016/llvm/exercises/: CMakeLists.txt
2016/llvm/exercises/FirstPass/: CMakeLists.txt  FirstPass.cpp
2016/llvm/exercises/FirstTransform/: CMakeLists.txt  FirstTransform.cpp
2016/llvm/exercises/IRM/: CMakeLists.txt  IRMInliner.cpp  example.c
2016/llvm/exercises/InstructionCount/: CMakeLists.txt  InstructionCount.cpp
2016/llvm/exercises/ParameterFlow/: CMakeLists.txt  ParameterFlow.cpp
2016/llvm/exercises/PointerObservation/: CMakeLists.txt  PointerObservation.cpp
2019/: APSA.dstheme
(+195 files in other folders)
